--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-DB_URL=mongodb+srv://petro:ausbildung@questionscluster.pawtr.mongodb.net/pencileDB?retryWrites=true&w=majority
+DB_URL=mongodb+srv://petro:pmp@questionscluster.pawtr.mongodb.net/pencileDB?retryWrites=true&w=majority
